# Nevora-Translator

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-llm.txt  requirements-providers.txt  requirements-ui.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
eval/: __init__.py  run_eval.py
eval/prompts/: golden.json
examples/: unreal_importer.py
examples/pairs/: python_jump_example.md  unreal_asset_manifest_example.json
scripts/: package_release.py
tests/: test_eval.py  test_release_smoke.py  test_services.py  test_translator.py
translator/: __init__.py  _version.py  cli.py  core.py  models.py  services.py
translator/generators/: anthropic_codegen.py  multi_codegen.py  project_packager.py  world_builder.py
translator/planners/: __init__.py  base.py  heuristic.py  huggingface_planner.py  openai_planner.py
translator/targets/: __init__.py  base.py  blueprint_target.py  cpp_target.py  csharp_target.py  gdscript_target.py  javascript_target.py  python_target.py  registry.py
