[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nevora-translator"
version = "0.1.0rc1"
description = "English and multilingual prompt to starter-code translator with CLI and Streamlit UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nevora contributors" }]
keywords = ["translator", "codegen", "streamlit", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "requests>=2.32.3",
]

[project.optional-dependencies]
ui = ["streamlit>=1.39.0"]
providers = [
  "anthropic>=0.34.2",
  "openai>=1.52.0",
  "google-generativeai>=0.8.3",
]
planners = [
  "transformers>=4.45.0",
  "torch>=2.4.0",
  "accelerate>=0.34.2",
]
dev = [
  "pytest>=8.3.5",
  "mypy>=1.11.2",
]
all = [
  "streamlit>=1.39.0",
  "anthropic>=0.34.2",
  "openai>=1.52.0",
  "google-generativeai>=0.8.3",
  "transformers>=4.45.0",
  "torch>=2.4.0",
  "accelerate>=0.34.2",
  "pytest>=8.3.5",
  "mypy>=1.11.2",
]

[project.scripts]
nevora-translator = "translator.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["translator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
